dig-src/main/default/objects/DIG_Emission__e/DIG_Emission__e.object-meta.xml
<CustomObject>
    <description>DIG emissions event bus (evidence-grade envelope)</description>
    <label>DIG Emission</label>
    <pluralLabel>DIG Emissions</pluralLabel>
</CustomObject>