dig-src/main/default/objects/DIG_Emission__e/fields/At__c.field-meta.xml
<CustomField>
    <fullName>At__c</fullName>
    <label>At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>