dig-src/main/default/objects/DIG_Emission__e/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>