dig-src/main/default/objects/DIG_Emission__e/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <label>Idempotency Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>