dig-src/main/default/objects/DIG_Emission__e/fields/PrevHash__c.field-meta.xml
<CustomField>
    <fullName>PrevHash__c</fullName>
    <label>Prev Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>