dig-src/main/default/objects/DIG_Emission__e/fields/RunId__c.field-meta.xml
<CustomField>
    <fullName>RunId__c</fullName>
    <label>Run Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>