dig-src/main/default/objects/DIG_Emission__e/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Seq</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>