dig-src/main/default/objects/DIG_Emission__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>