dig-src/main/default/objects/DIG_Emission__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>